# Android-UnrealEngine-Modloader

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: build.yml
PCBridge/: Cargo.toml  build.rs
PCBridge/src/: adb.rs  app.rs  bridge.rs  main.rs  worker.rs
docs/: CROSSOVER_ENEMY_MISSING_DATA.md  CUTSCENE_3D_ANALYSIS.md  DOTNET_MODS.md  IDA_MAPPING.md
dotnet/UEModLoader.Api/: AssemblyInfo.cs  Blueprint.cs  Exceptions.cs  Harmony.cs  Hooks.cs  Host.cs  Interop.cs  Log.cs  Memory.cs  Mod.cs  ModRuntime.cs  Native.cs  Patch.cs  ProxyCompiler.cs  Types.cs  UEModLoader.Api.csproj  UObject.cs
dotnet/UEModLoader.DebugMenu.src/: DebugMenuMod.cs  LuaMenuBridge.cs  MenuFramework.cs  MenuRegistry.cs  UEModLoader.DebugMenu.csproj
dotnet/UEModLoader.Game.src/: DebugMenu.cs  UEModLoader.Game.csproj
installer/: Cargo.toml
installer/src/: adb.rs  game_db.rs  gui.rs  pipeline.rs  signer.rs  smali.rs  tools_setup.rs
lsposed-module/: README.md  build.gradle  gradle.properties  settings.gradle  sync-payload.bat  sync-payload.sh
lsposed-module/app/: build.gradle
lsposed-module/magisk/: 98-uml-mirror.sh
lua/: harmony.lua
mcp/: README.md  adb_mcp.py  requirements.txt  ue_modloader_mcp.py
modloader/: CMakeLists.txt  build.bat  build.sh
modloader/include/modloader/: adb_bridge.h  arch.h  arm64_asm.h  auto_offsets.h  class_rebuilder.h  codepatch.h  config.h  crash_guard.h  crash_handler.h  csharp_proxy_generator.h  dotnet_host.h  ida_mapping_generator.h  logger.h  lua_bindings.h  lua_delayed_actions.h  lua_dump_generator.h  memtrace.h  (+11 more)
modloader/src/: main.cpp
(+89 files in other folders)
